--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 <body class="home-page">
 
-     <header>
+  <header>
     <a href="#home">
       <img src="assets/wauu.PNG" alt="School Logo" class="logo" />
     </a>
-    <nav>
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+    <nav class="hbtn" id="dropdown-menu">
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -87,5 +88,10 @@
   <div id="xrcontent"></div>
   
   <script src="script.js"></script>
+  <script>
+    document.getElementById("menu-toggle").addEventListener("click", function () {
+      document.getElementById("dropdown-menu").classList.toggle("active");
+    });
+  </script>
 </body>
 </html>
