--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#navigate">Navigate</a></li>
-        <li><a href="#how-to-use" id="start-nav">Start AR</a></li>
+        <li><a href="#navigate" id="start-nav">Start AR</a></li>
       </ul>
     </nav>
   </header>
@@ -39,8 +39,12 @@
 
   <section id="how-to-use" class="how-to-use-section">
     <h2>How to Use</h2>
+    <p class="how-to-use-intro">
+      This section introduces you to the School AR Map experience. It gives a quick overview of how to use the
+      webapp From navigation highlights to basic interaction steps, this guide helps you get oriented with the AR environment.
+    </p>
     <div class="flex-container">
-      <div id="tut-box1" class="flex-box" data-slide="left">
+      <div id="tut-box" class="flex-box" data-slide="left">
         <ol>
           <li>Open the website on your phone or tablet.</li>
           <li>Download and install the APK file</li>
@@ -50,7 +54,7 @@
           <li>click <a href="#">here</a>  to learn more.</li>
         </ol>
       </div>
-      <div id="tut-box2" class="flex-box" data-slide="right">
+      <div id="tut-box" class="flex-box" data-slide="right">
         <div>
           <div class="tut-txt">
             <h3>Watch Tutorial</h3> 
@@ -62,7 +66,7 @@
         </div>
       </div>
     </div>
-    <a href="#how-to-use" id="navigate" class="navigate">Navigate Now</a>
+    <a href="#how-to-use" id="navigate" class="navigate" id="navigate" >Navigate Now</a>
 
   </section>
 
