--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </div>
     <div style="display: flex; gap: 15px; justify-content: center; margin-top: 20px;">
       <a href="#how-to-use" class="navigate">Navigate Now</a>
-      <a href="assets/SchoolAR.apk" class="navigate" download>Download APK</a>
+      <a href="https://www.dropbox.com/scl/fi/k309vvkwvmhdci1904fg3/SchoolAR.apk?rlkey=9vxr8nv3l177ds2qtlzdt0ewx&st=lq5jzgxp&dl=1" 
+        class="navigate" download>Download APK</a>
     </div>
 
   </section>
