--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <div style="display: flex; gap: 15px; justify-content: center; margin-top: 20px;">
       <a href="intent://launch#Intent;scheme=schoolar;package=com.DefaultCompany.MySchoolAr;end;" class="navigate">Navigate Now</a>
-      <a href="https://www.dropbox.com/scl/fi/k309vvkwvmhdci1904fg3/SchoolAR.apk?rlkey=9vxr8nv3l177ds2qtlzdt0ewx&st=lq5jzgxp&dl=1" 
+      <a href="https://www.dropbox.com/scl/fi/8is7av8uolmsqbft7xfn4/WAUU-AR-MAP.apk?rlkey=4gj7gsxt56zu4oq6j9itw5tsf&st=6un8yq2e&dl=1" 
         class="navigate" download>Download APK</a>
     </div>
 
